--- a/html/styles/chat.css
+++ b/html/styles/chat.css
@@ -1,11 +1,14 @@
 #chat_container {
     background-color: #ddd;
+    max-width: 100%;
+    width: 500px;
+    height: calc(100% - 90px);
 
-    width: 80%;
 }
 
 #chat_container #chats {
-    height:500px;
+    max-height: 100%;
+    
     overflow-y: scroll;
 }
 
